# applications-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: apps.rs
src/: api.rs  common.rs  lib.rs
src/utils/: mac.rs
src/watcher/: linux.rs  macos.rs  mod.rs  windows.rs
