[package]
name = "applications"
version = "0.3.1"
edition = "2021"
description = "A cross-platform library for finding installed applications."
license = "MIT"
repository = "https://github.com/HuakunShen/applications-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0" }
walkdir = "2.4.0"
anyhow = "1.0.83"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
windows-icons = "0.2.1"
winapi = { version = "0.3.9", features = ["shellapi"] }
notify = "8.0.0"
lnk = "0.5.1"
parselnk = "0.1.1"
serde_json = "1.0.116"
winreg = "0.52.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
plist = "1.6.1"
tauri-icns = "0.1.0"
glob = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-file-parser = "0.1.0"


[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["event", "fs", "inotify"] }